# Price-Tracker

./: .gitignore  LICENSE  main.py  pyproject.toml  readme.md  requirements.txt
tracker/: __init__.py  alert.py  database.py  scheduler.py  scraper.py  utils.py
